@@ -2,6 +2,7 @@ dev:
   * bugfix: energy envelope and not velocity seismogram is now divided by filter width
   * bugfix: bulk wave was not correctly handled if beginning of coda window was before S-onset
   * bugfix: seismic moment magnitude now calculated more precisely
-  * imaging: add possibility to configure grid layout (nx, ny)
+  * core: allow to cut the coda at local minimum (useful to cut out aftershocks etc.)
+  * imaging: allow to configure grid layout (nx, ny)
 v1.0:
   * initial release
